# dna-microarray-db

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  schema.psql
docs/: design.md
src/miqa/: __main__.py  arrayexpress.py  config.py  db.py  error.py  geo.py  normalise.py  server.py  storage.py  utils.py
src/miqa/static/: style.css
src/miqa/templates/: base.html  index.html  stats.html
src/miqa/templates/partials/: preview_table.html  rule_form.html  rule_list.html  rule_row.html  rule_row_edit.html
test/: E-MTAB-14823.idf.txt  E-MTAB-14823.sdrf.txt  E-MTAB-14823.tsv
test/miqa/: test_arrayexpress.py  test_geo.py  test_normalise.py
