[project]
name = "dna-methylation-qc"
version = "0.0.1"
description = "DNA methylation microarray QC database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "methylprep>=1.7.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "toolz>=1.1.0",
    "typer>=0.12.0",
    "xmltodict>=1.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[build-system]
requires = ["setuptools"]
requires-python = "==3.13.*"
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "."]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
